2007-03-02  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	Add .bz2.

2007-02-07  Christian Persch  <chpe@svn.gnome.org>

	* data/default-prefs-common.js:

	Set the new pwdmgr pref.

2007-02-02  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2007-02-02  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2007-01-30  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	Add video/x-theora+ogg to list of known mime types.

2007-01-29  Christian Persch  <chpe@svn.gnome.org>

	* configure.ac:

	Post-release version bump.

2007-01-29  Christian Persch  <chpe@svn.gnome.org>

	=== Release 2.16.3 ===

	* NEWS:
	* configure.ac:
	* doc/reference/tmpl/ephy-embed.sgml:
	* doc/reference/tmpl/ephy-shell.sgml:
	* embed/mozilla/ContentHandler.cpp:
	* src/popup-commands.c: (background_download_completed):

2007-01-28  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp: (GContentHandler::Show):

	Check for a potential veto. Fix #342951.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* src/ephy-tabs-menu.c: (sync_active_tab):

	Make this a regular check, not g_return_if_fail.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* data/default-prefs-common.js:

	Set bidi caret movement pref to mimick gtk widgets.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus):
	
	Fix error condition check.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	Add more mime types.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* lib/ephy-node.c: (safe_write_string), (ephy_node_write_to_xml):
	* src/bookmarks/ephy-bookmarks-export.c: (sanitise_string),
	(write_topics_list), (write_rdf):

	Make sure we don't write characters < 0x20 (except 0x9, 0xa, 0xd) to
	XML. Bug #392782.
