@@ -1,3 +1,11 @@
+2007-03-04  Christian Persch  <chpe@svn.gnome.org>
+
+	* src/ephy-net-monitor.c: (ephy_net_monitor_check_network),
+	(ephy_net_monitor_startup):
+
+	Don't crash when we cannot access the system bus. Bug #404514, patch
+	by Jan de Groot.
+
 2007-03-02  Christian Persch  <chpe@svn.gnome.org>
 
 	* data/mime-types-permissions.xml:
